More rendering config

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 addons:
   chrome: stable
 before_install:
+  - export CHROME_PATH="$(pwd)/chrome-linux/chrome"
   - google-chrome-stable --no-sandbox --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   - |
     until nc -z -v -w30 127.0.0.1 9222
