Increase the test run timeout

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "scripts": {
     "test": "teenytest 'test/**/*-test.js' --helper test/helper.js && ./node_modules/.bin/eslint *.js, **/**.js",
     "testncov": "nyc --reporter=lcov --reporter=text teenytest 'test/**/*-test.js' --helper test/helper.js && ./node_modules/.bin/eslint *.js, **/**.js"
+  },
+  "teenytest": {
+    "timeout": 10000
   }
 }
