Specify the heroku stack to deploy to

--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
   ],
   "scripts": {
   },
+  "stack": "heroku-16",
   "repository": "https://github.com/danielwestendorf/breezy-pdf-lite",
   "env": {
     "PRIVATE_TOKEN": {
