Use chrome-launches instead of self-managing chrome process

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "GNUv3",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "chrome-launcher": "^0.12.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "html-pdf-chrome": "^0.6.0",
@@ -34,7 +35,11 @@
     "timeout": 10000
   },
   "nyc": {
-    "exclude": ["index.js"],
-    "include": ["lib/**/*.js"]
+    "exclude": [
+      "index.js"
+    ],
+    "include": [
+      "lib/**/*.js"
+    ]
   }
 }
