--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "chrome-launcher": "^0.13.3",
+    "compression": "^1.7.4",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "html-pdf-chrome": "^0.6.0",
