--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "testdouble": "^3.16.1"
   },
   "scripts": {
-    "test": "teenytest 'test/**/*-test.js' --helper test/helper.js && ./node_modules/.bin/eslint *.js, **/**.js",
+    "test": "teenytest 'test/**/*-test.js' --helper test/helper.js",
+    "lint": "./node_modules/.bin/eslint.js lib/* test/* *.js",
     "testncov": "nyc --reporter=lcov --reporter=text teenytest 'test/**/*-test.js' --helper test/helper.js && ./node_modules/.bin/eslint *.js, **/**.js"
   },
   "teenytest": {
